--- a/public/index.html
+++ b/public/index.html
@@ -195,19 +195,39 @@
       <div class="space-y-4">
         <h3 class="text-sm font-semibold text-gray-800 uppercase tracking-wider">Recent searches</h3>
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3">
-          <div class="py-2 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center max-h-[110px]">
+          <div class="group py-2 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center max-h-[110px] relative">
+            <button class="absolute top-1 right-1 w-6 h-6 bg-white/90 rounded-full flex items-center justify-center opacity-0 group-hover:opacity-100 transition shadow-sm z-10">
+              <svg class="w-4 h-4 text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+              </svg>
+            </button>
             <img src="https://images.unsplash.com/photo-1555041469-a586c61ea9bc?auto=format&fit=crop&w=100&q=80" alt="Recent" class="w-[30%] h-full object-cover mr-3 rounded-l-2xl" />
             <span class="text-gray-900 flex-1 text-center text-base font-medium">Furniture assembly</span>
           </div>
-          <div class="py-2 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center max-h-[110px]">
+          <div class="group py-2 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center max-h-[110px] relative">
+            <button class="absolute top-1 right-1 w-6 h-6 bg-white/90 rounded-full flex items-center justify-center opacity-0 group-hover:opacity-100 transition shadow-sm z-10">
+              <svg class="w-4 h-4 text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+              </svg>
+            </button>
             <img src="https://images.unsplash.com/photo-1532453288672-3a27e9be9efd?auto=format&fit=crop&w=100&q=80" alt="Recent" class="w-[30%] h-full object-cover mr-3 rounded-l-2xl" />
             <span class="text-gray-900 flex-1 text-center text-base font-medium">Mount art or shelves</span>
           </div>
-          <div class="py-2 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center max-h-[110px]">
+          <div class="group py-2 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center max-h-[110px] relative">
+            <button class="absolute top-1 right-1 w-6 h-6 bg-white/90 rounded-full flex items-center justify-center opacity-0 group-hover:opacity-100 transition shadow-sm z-10">
+              <svg class="w-4 h-4 text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+              </svg>
+            </button>
             <img src="https://images.unsplash.com/photo-1600518464441-9154a4dea21b?auto=format&fit=crop&w=100&q=80" alt="Recent" class="w-[30%] h-full object-cover mr-3 rounded-l-2xl" />
             <span class="text-gray-900 flex-1 text-center text-base font-medium">Movers</span>
           </div>
-          <div class="py-2 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center max-h-[110px]">
+          <div class="group py-2 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center max-h-[110px] relative">
+            <button class="absolute top-1 right-1 w-6 h-6 bg-white/90 rounded-full flex items-center justify-center opacity-0 group-hover:opacity-100 transition shadow-sm z-10">
+              <svg class="w-4 h-4 text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+              </svg>
+            </button>
             <img src="https://images.unsplash.com/photo-1621905252507-b35492cc74b4?auto=format&fit=crop&w=100&q=80" alt="Recent" class="w-[30%] h-full object-cover mr-3 rounded-l-2xl" />
             <span class="text-gray-900 flex-1 text-center text-base font-medium">Electrical help</span>
           </div>
