--- a/public/index.html
+++ b/public/index.html
@@ -234,33 +234,74 @@
         </div>
 
         <h3 class="text-sm font-semibold text-gray-800 uppercase tracking-wider mt-8">Popular on U Do</h3>
-        <div class="space-y-2">
-          <div class="flex items-center gap-3 p-3 hover:bg-gray-50 rounded-lg cursor-pointer transition">
-            <svg class="w-5 h-5 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z" />
-            </svg>
-            <span class="text-gray-700">Furniture assembly</span>
+        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3">
+          <div class="group py-2 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center max-h-[110px] relative">
+            <button class="absolute top-1 right-1 w-6 h-6 bg-white/90 rounded-full flex items-center justify-center opacity-0 group-hover:opacity-100 transition shadow-sm z-10">
+              <svg class="w-4 h-4 text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+              </svg>
+            </button>
+            <img src="https://images.unsplash.com/photo-1555041469-a586c61ea9bc?auto=format&fit=crop&w=100&q=80" alt="Recent" class="w-[30%] h-full object-cover mr-3 rounded-l-2xl" />
+            <span class="text-gray-900 flex-1 text-center text-base font-medium">Furniture assembly</span>
           </div>
-          <div class="flex items-center gap-3 p-3 hover:bg-gray-50 rounded-lg cursor-pointer transition">
-            <svg class="w-5 h-5 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z" />
-            </svg>
-            <span class="text-gray-700">Mount art or shelves</span>
+          <div class="group py-2 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center max-h-[110px] relative">
+            <button class="absolute top-1 right-1 w-6 h-6 bg-white/90 rounded-full flex items-center justify-center opacity-0 group-hover:opacity-100 transition shadow-sm z-10">
+              <svg class="w-4 h-4 text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+              </svg>
+            </button>
+            <img src="https://images.unsplash.com/photo-1532453288672-3a27e9be9efd?auto=format&fit=crop&w=100&q=80" alt="Recent" class="w-[30%] h-full object-cover mr-3 rounded-l-2xl" />
+            <span class="text-gray-900 flex-1 text-center text-base font-medium">Mount art or shelves</span>
           </div>
-          <div class="flex items-center gap-3 p-3 hover:bg-gray-50 rounded-lg cursor-pointer transition">
-            <svg class="w-5 h-5 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z" />
-            </svg>
-            <span class="text-gray-700">Movers</span>
+          <div class="group py-2 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center max-h-[110px] relative">
+            <button class="absolute top-1 right-1 w-6 h-6 bg-white/90 rounded-full flex items-center justify-center opacity-0 group-hover:opacity-100 transition shadow-sm z-10">
+              <svg class="w-4 h-4 text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+              </svg>
+            </button>
+            <img src="https://images.unsplash.com/photo-1600518464441-9154a4dea21b?auto=format&fit=crop&w=100&q=80" alt="Recent" class="w-[30%] h-full object-cover mr-3 rounded-l-2xl" />
+            <span class="text-gray-900 flex-1 text-center text-base font-medium">Movers</span>
           </div>
         </div>
 
         <h3 class="text-sm font-semibold text-gray-800 uppercase tracking-wider mt-8">Trending now</h3>
-        <div class="flex flex-wrap gap-2">
-          <span class="px-4 py-2 bg-gray-100 hover:bg-gray-200 rounded-full text-gray-700 cursor-pointer transition">Cabbage Crush</span>
-          <span class="px-4 py-2 bg-gray-100 hover:bg-gray-200 rounded-full text-gray-700 cursor-pointer transition">Yearning aesthetic</span>
-          <span class="px-4 py-2 bg-gray-100 hover:bg-gray-200 rounded-full text-gray-700 cursor-pointer transition">Date night glam</span>
-          <span class="px-4 py-2 bg-gray-100 hover:bg-gray-200 rounded-full text-gray-700 cursor-pointer transition">Evening wear</span>
+        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3">
+          <div class="group py-2 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center max-h-[110px] relative">
+            <button class="absolute top-1 right-1 w-6 h-6 bg-white/90 rounded-full flex items-center justify-center opacity-0 group-hover:opacity-100 transition shadow-sm z-10">
+              <svg class="w-4 h-4 text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+              </svg>
+            </button>
+            <img src="https://images.unsplash.com/photo-1585704032915-c3400ca199e7?auto=format&fit=crop&w=100&q=80" alt="Trending" class="w-[30%] h-full object-cover mr-3 rounded-l-2xl" />
+            <span class="text-gray-900 flex-1 text-center text-base font-medium">Cabbage Crush</span>
+          </div>
+          <div class="group py-2 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center max-h-[110px] relative">
+            <button class="absolute top-1 right-1 w-6 h-6 bg-white/90 rounded-full flex items-center justify-center opacity-0 group-hover:opacity-100 transition shadow-sm z-10">
+              <svg class="w-4 h-4 text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+              </svg>
+            </button>
+            <img src="https://images.unsplash.com/photo-1581578731548-c64695cc6952?auto=format&fit=crop&w=100&q=80" alt="Trending" class="w-[30%] h-full object-cover mr-3 rounded-l-2xl" />
+            <span class="text-gray-900 flex-1 text-center text-base font-medium">Yearning aesthetic</span>
+          </div>
+          <div class="group py-2 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center max-h-[110px] relative">
+            <button class="absolute top-1 right-1 w-6 h-6 bg-white/90 rounded-full flex items-center justify-center opacity-0 group-hover:opacity-100 transition shadow-sm z-10">
+              <svg class="w-4 h-4 text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+              </svg>
+            </button>
+            <img src="https://images.unsplash.com/photo-151588665766-77a29e4145d2?auto=format&fit=crop&w=100&q=80" alt="Trending" class="w-[30%] h-full object-cover mr-3 rounded-l-2xl" />
+            <span class="text-gray-900 flex-1 text-center text-base font-medium">Date night glam</span>
+          </div>
+          <div class="group py-2 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center max-h-[110px] relative">
+            <button class="absolute top-1 right-1 w-6 h-6 bg-white/90 rounded-full flex items-center justify-center opacity-0 group-hover:opacity-100 transition shadow-sm z-10">
+              <svg class="w-4 h-4 text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+              </svg>
+            </button>
+            <img src="https://images.unsplash.com/photo-1522335789203-aabd1fc54bc9?auto=format&fit=crop&w=100&q=80" alt="Trending" class="w-[30%] h-full object-cover mr-3 rounded-l-2xl" />
+            <span class="text-gray-900 flex-1 text-center text-base font-medium">Evening wear</span>
+          </div>
         </div>
 
       </div>
