--- a/public/index.html
+++ b/public/index.html
@@ -272,8 +272,8 @@
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
               </svg>
             </button>
-            <img src="https://images.unsplash.com/photo-1585704032915-c3400ca199e7?auto=format&fit=crop&w=100&q=80" alt="Trending" class="w-[30%] h-full object-cover mr-3 rounded-l-2xl" />
-            <span class="text-gray-900 flex-1 text-center text-base font-medium">Cabbage Crush</span>
+            <img src="https://images.unsplash.com/photo-1555041469-a586c61ea9bc?auto=format&fit=crop&w=100&q=80" alt="Trending" class="w-[30%] h-full object-cover mr-3 rounded-l-2xl" />
+            <span class="text-gray-900 flex-1 text-center text-base font-medium">Furniture assembly</span>
           </div>
           <div class="group py-2 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center max-h-[110px] relative">
             <button class="absolute top-1/2 -translate-y-1/2 right-1 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
@@ -281,8 +281,8 @@
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
               </svg>
             </button>
-            <img src="https://images.unsplash.com/photo-1581578731548-c64695cc6952?auto=format&fit=crop&w=100&q=80" alt="Trending" class="w-[30%] h-full object-cover mr-3 rounded-l-2xl" />
-            <span class="text-gray-900 flex-1 text-center text-base font-medium">Yearning aesthetic</span>
+            <img src="https://images.unsplash.com/photo-1532453288672-3a27e9be9efd?auto=format&fit=crop&w=100&q=80" alt="Trending" class="w-[30%] h-full object-cover mr-3 rounded-l-2xl" />
+            <span class="text-gray-900 flex-1 text-center text-base font-medium">Mount art or shelves</span>
           </div>
           <div class="group py-2 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center max-h-[110px] relative">
             <button class="absolute top-1/2 -translate-y-1/2 right-1 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
@@ -290,8 +290,8 @@
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
               </svg>
             </button>
-            <img src="https://images.unsplash.com/photo-151588665766-77a29e4145d2?auto=format&fit=crop&w=100&q=80" alt="Trending" class="w-[30%] h-full object-cover mr-3 rounded-l-2xl" />
-            <span class="text-gray-900 flex-1 text-center text-base font-medium">Date night glam</span>
+            <img src="https://images.unsplash.com/photo-1600518464441-9154a4dea21b?auto=format&fit=crop&w=100&q=80" alt="Trending" class="w-[30%] h-full object-cover mr-3 rounded-l-2xl" />
+            <span class="text-gray-900 flex-1 text-center text-base font-medium">Movers</span>
           </div>
           <div class="group py-2 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center max-h-[110px] relative">
             <button class="absolute top-1/2 -translate-y-1/2 right-1 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
@@ -299,8 +299,8 @@
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
               </svg>
             </button>
-            <img src="https://images.unsplash.com/photo-1522335789203-aabd1fc54bc9?auto=format&fit=crop&w=100&q=80" alt="Trending" class="w-[30%] h-full object-cover mr-3 rounded-l-2xl" />
-            <span class="text-gray-900 flex-1 text-center text-base font-medium">Evening wear</span>
+            <img src="https://images.unsplash.com/photo-1621905252507-b35492cc74b4?auto=format&fit=crop&w=100&q=80" alt="Trending" class="w-[30%] h-full object-cover mr-3 rounded-l-2xl" />
+            <span class="text-gray-900 flex-1 text-center text-base font-medium">Electrical help</span>
           </div>
         </div>
 
