--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body {
-      background-color: #f9f7f5; /* soft beige/cream Pinterest vibe */
+      background-color: #f9f7f5;
     }
     .card-hover:hover img {
       transform: scale(1.06);
@@ -27,63 +27,54 @@
 <body class="min-h-screen font-sans antialiased text-gray-900">
 
   <!-- Top Search Bar -->
-  
   <header class="sticky top-0 z-50 bg-white/80 backdrop-blur-md border-b border-gray-200 shadow-sm">
-  <h1 class="absolute left-12 top-1/2 -translate-y-1/2 z-[60]">
-    <img src="UDO-6.jpg" alt="UDO" class="h-32 w-auto max-w-none shadow-lg rounded-lg" />
-  </h1>
+    <h1 class="absolute left-12 top-1/2 -translate-y-1/2 z-[60]">
+      <img src="UDO-6.jpg" alt="UDO" class="h-32 w-auto max-w-none shadow-lg rounded-lg" />
+    </h1>
 
-  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-3 flex items-center justify-between gap-4">
-    
-    <div class="w-40 hidden lg:block"></div>
-
-    <div class="flex-1 max-w-3xl">
-      <div class="relative">
-        <input
-          id="searchInput"
-          type="text"
-          placeholder="Search"
-          class="w-full pl-5 pr-12 py-3.5 bg-gray-100/80 border border-gray-300 rounded-full text-base focus:outline-none focus:ring-2 focus:ring-gray-400/50 transition shadow-sm cursor-pointer"
-          readonly
-        />
-        <button class="absolute right-4 top-1/2 -translate-y-1/2 text-gray-500 hover:text-gray-700">
-          <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-3 flex items-center justify-between gap-4">
+      <div class="w-40 hidden lg:block"></div>
+      <div class="flex-1 max-w-3xl">
+        <div class="relative">
+          <input
+            id="searchInput"
+            type="text"
+            placeholder="Search"
+            class="w-full pl-5 pr-12 py-3.5 bg-gray-100/80 border border-gray-300 rounded-full text-base focus:outline-none focus:ring-2 focus:ring-gray-400/50 transition shadow-sm cursor-pointer"
+            readonly
+          />
+          <button class="absolute right-4 top-1/2 -translate-y-1/2 text-gray-500 hover:text-gray-700">
+            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
+            </svg>
+          </button>
+        </div>
+      </div>
+      <div class="flex items-center gap-3">
+        <button class="p-2 rounded-full hover:bg-gray-100">
+          <svg class="w-6 h-6 text-gray-700" fill="currentColor" viewBox="0 0 24 24">
+            <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"/>
           </svg>
         </button>
+        <div class="w-9 h-9 bg-gray-300 rounded-full flex items-center justify-center text-white font-medium">J</div>
       </div>
     </div>
-
-    <div class="flex items-center gap-3">
-      <button class="p-2 rounded-full hover:bg-gray-100">
-        <svg class="w-6 h-6 text-gray-700" fill="currentColor" viewBox="0 0 24 24">
-          <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"/>
-        </svg>
-      </button>
-      <div class="w-9 h-9 bg-gray-300 rounded-full flex items-center justify-center text-white font-medium">J</div>
-    </div>
-  </div>
-</header>
-
-
+  </header>
 
   <!-- Main Content – U Do Section -->
   <main class="w-full px-16 sm:px-24 lg:px-32 py-10 bg-white">
-
     <!-- Big Title + Subtitle -->
     <div class="text-center mb-10">
       <h1 class="text-5xl sm:text-6xl md:text-7xl font-extrabold tracking-tight mb-3">
         <span class="text-orange-500">U</span><span class="text-black">Do</span>
       </h1>
       <p class="text-xl sm:text-2xl text-gray-700 font-light">
-        <!-- Select the best, they'll do the rest. -->
          Select the best. Skip the (middleman) commission.
       </p>
     </div>
 
     <!-- Grid of image cards -->
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-x-10 gap-y-5 md:gap-x-12 md:gap-y-6">
-
       <!-- Card 1 -->
       <div class="group relative rounded-3xl overflow-hidden shadow-md hover:shadow-xl transition-shadow duration-300 bg-white h-[351px] w-[96%] mx-auto">
         <img
@@ -167,35 +158,37 @@
           <p class="text-4xl font-semibold">Cleaning help</p>
         </div>
       </div>
-
     </div>
-
-    <!-- Two-Column Split Layout -->
-    <div class="flex flex-col lg:flex-row gap-8 mt-12 bg-orange-50 rounded-3xl p-8 lg:p-12">
-      <!-- Left Column - Image -->
-      <div class="flex-1">
-        <img
-          src="https://images.unsplash.com/photo-1556761175-5973dc0f32e7?auto=format&fit=crop&w=800&q=80"
-          alt="Professional at work"
-          class="w-full h-full object-cover rounded-2xl shadow-lg"
-        />
-      </div>
-
-      <!-- Right Column - Text Content -->
-      <div class="flex-1 flex flex-col justify-center">
-        <h2 class="text-4xl lg:text-5xl font-bold text-gray-900 mb-6">
-          Get the Help You Need, When You Need It
-        </h2>
-        <p class="text-lg text-gray-600 leading-relaxed mb-8">
-          Connect with verified professionals for any task around your home. From furniture assembly to home repairs, we make it easy to find skilled help at fair prices. No middleman, no hidden fees, just quality service you can trust.
-        </p>
-        <button class="bg-orange-500 hover:bg-orange-600 text-white font-semibold py-4 px-8 rounded-full text-lg transition duration-300 shadow-md hover:shadow-lg w-fit">
-          Get Started Today
-        </button>
-      </div>
-    </div>
-
   </main>
+
+  <!-- Two-Column Split Layout - Full Width Background -->
+  <section class="bg-orange-50 py-16">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+      <div class="flex flex-col lg:flex-row gap-8 items-center">
+        <!-- Left Column - Image -->
+        <div class="flex-1">
+          <img
+            src="https://images.unsplash.com/photo-1556761175-5973dc0f32e7?auto=format&fit=crop&w=800&q=80"
+            alt="Professional at work"
+            class="w-full h-full object-cover rounded-2xl shadow-lg"
+          />
+        </div>
+
+        <!-- Right Column - Text Content -->
+        <div class="flex-1 flex flex-col justify-center">
+          <h2 class="text-4xl lg:text-5xl font-bold text-gray-900 mb-6">
+            Get the Help You Need, When You Need It
+          </h2>
+          <p class="text-lg text-gray-600 leading-relaxed mb-8">
+            Connect with professionals for any task around your home. From furniture assembly to home repairs, we make it easy to find skilled help at fair prices. No middleman, no hidden fees, just quality service you can trust.
+          </p>
+          <button class="bg-orange-500 hover:bg-orange-600 text-white font-semibold py-4 px-8 rounded-full text-lg transition duration-300 shadow-md hover:shadow-lg w-fit">
+            Get Started Today
+          </button>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- Search Overlay -->
   <div id="searchOverlay" class="search-overlay fixed left-0 right-0 top-0 z-[100] pt-[70px] bg-black/20 backdrop-blur-sm pointer-events-none">
@@ -328,7 +321,6 @@
             <span class="text-gray-900 flex-1 text-center text-base font-medium">Electrical help</span>
           </div>
         </div>
-
       </div>
     </div>
   </div>
@@ -339,18 +331,15 @@
     const closeSearch = document.getElementById('closeSearch');
     const overlaySearchInput = document.getElementById('overlaySearchInput');
 
-    // Open search overlay
     searchInput.addEventListener('click', () => {
       searchOverlay.classList.add('active');
       overlaySearchInput.focus();
     });
 
-    // Close search overlay
     closeSearch.addEventListener('click', () => {
       searchOverlay.classList.remove('active');
     });
 
-    // Close on click outside (only close if clicking on overlay background, not on inner box)
     document.addEventListener('click', (e) => {
       if (searchOverlay.classList.contains('active') && 
           !searchOverlay.querySelector('.bg-white').contains(e.target) &&
@@ -359,7 +348,6 @@
       }
     });
 
-    // Close on escape key
     document.addEventListener('keydown', (e) => {
       if (e.key === 'Escape') {
         searchOverlay.classList.remove('active');
