--- a/public/index.html
+++ b/public/index.html
@@ -180,11 +180,40 @@
             Get the Help You Need, When You Need It
           </h2>
           <p class="text-lg text-gray-600 leading-relaxed mb-8">
-            Connect with professionals for any task around your home. From furniture assembly to home repairs, we make it easy to find skilled help at fair prices. No middleman, no hidden fees, just quality service you can trust.
+            Connect with verified professionals for any task around your home. From furniture assembly to home repairs, we make it easy to find skilled help at fair prices. No middleman, no hidden fees, just quality service you can trust.
           </p>
           <button class="bg-orange-500 hover:bg-orange-600 text-white font-semibold py-4 px-8 rounded-full text-lg transition duration-300 shadow-md hover:shadow-lg w-fit">
             Get Started Today
           </button>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Two-Column Split Layout - Swapped - White Background -->
+  <section class="bg-white py-16">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+      <div class="flex flex-col lg:flex-row gap-8 items-center">
+        <!-- Left Column - Text Content -->
+        <div class="flex-1 flex flex-col justify-center">
+          <h2 class="text-4xl lg:text-5xl font-bold text-gray-900 mb-6">
+            Sign Up to U Do, Get Clients and Get Paid
+          </h2>
+          <p class="text-lg text-gray-600 leading-relaxed mb-8">
+            Join our network of skilled professionals and connect with customers who need your services. Set your own rates, choose the jobs you want, and get paid directly. No middleman taking a cut - you keep what you earn.
+          </p>
+          <button class="bg-orange-500 hover:bg-orange-600 text-white font-semibold py-4 px-8 rounded-full text-lg transition duration-300 shadow-md hover:shadow-lg w-fit">
+            Join as Professional
+          </button>
+        </div>
+
+        <!-- Right Column - Image -->
+        <div class="flex-1">
+          <img
+            src="https://images.unsplash.com/photo-1556761175-5973dc0f32e7?auto=format&fit=crop&w=800&q=80"
+            alt="Professional at work"
+            class="w-full h-full object-cover rounded-2xl shadow-lg"
+          />
         </div>
       </div>
     </div>
