--- a/public/login/index.html
+++ b/public/login/index.html
@@ -16,11 +16,11 @@
     .search-overlay {
       transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
       opacity: 0;
-      pointer-events: none;
+      visibility: hidden;
     }
     .search-overlay.active {
       opacity: 1;
-      pointer-events: auto;
+      visibility: visible;
     }
   </style>
 </head>
@@ -41,7 +41,6 @@
             type="text"
             placeholder="Search"
             class="w-full pl-5 pr-12 py-3.5 bg-gray-100/80 border border-gray-300 rounded-full text-base focus:outline-none focus:ring-2 focus:ring-gray-400/50 transition shadow-sm cursor-pointer"
-            readonly
           />
           <button class="absolute right-4 top-1/2 -translate-y-1/2 text-gray-500 hover:text-gray-700">
             <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -155,8 +154,8 @@
   </main>
 
   <!-- Search Overlay -->
-  <div id="searchOverlay" class="search-overlay fixed left-0 right-0 top-0 z-[100] pt-[70px] bg-black/20 backdrop-blur-sm pointer-events-none">
-    <div class="mx-4 h-[70vh] bg-white shadow-2xl p-8 overflow-y-auto pointer-events-auto">
+  <div id="searchOverlay" class="search-overlay fixed left-0 right-0 top-0 z-[100] pt-[70px] bg-black/20 backdrop-blur-sm">
+    <div class="mx-4 h-[70vh] bg-white shadow-2xl p-8 overflow-y-auto">
       <div class="flex items-center justify-between mb-8">
         <div class="flex-1 mr-4">
           <input
