--- a/public/signup/index.html
+++ b/public/signup/index.html
@@ -11,16 +11,16 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body {
-      background-color: '#f9f7f5';
+      background-color: #f9f7f5;
     }
     .search-overlay {
       transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
       opacity: 0;
-      pointer-events: none;
+      visibility: hidden;
     }
     .search-overlay.active {
       opacity: 1;
-      pointer-events: auto;
+      visibility: visible;
     }
   </style>
 </head>
@@ -41,7 +41,6 @@
             type="text"
             placeholder="Search"
             class="w-full pl-5 pr-12 py-3.5 bg-gray-100/80 border border-gray-300 rounded-full text-base focus:outline-none focus:ring-2 focus:ring-gray-400/50 transition shadow-sm cursor-pointer"
-            readonly
           />
           <button class="absolute right-4 top-1/2 -translate-y-1/2 text-gray-500 hover:text-gray-700">
             <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -64,11 +63,11 @@
         <h1 class="text-4xl font-bold mb-2">
           <span class="text-orange-500">U</span><span class="text-black">Do</span>
         </h1>
-        <h2 class="text-2xl font-semibold text-gray-900">Create your account</h2>
-        <p class="text-gray-600 mt-2">Join UDo today and start connecting with professionals</p>
+        <h2 class="text-2xl font-semibold text-gray-900">Create an account</h2>
+        <p class="text-gray-600 mt-2">Join UDo today to get started</p>
       </div>
 
-      <form class="space-y-5">
+      <form class="space-y-4">
         <!-- Name Field -->
         <div>
           <label for="name" class="block text-sm font-medium text-gray-700 mb-2">Full Name</label>
@@ -103,11 +102,9 @@
             id="password"
             name="password"
             required
-            minlength="8"
             class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-orange-500 focus:border-transparent transition"
             placeholder="•••••••••"
           />
-          <p class="text-xs text-gray-500 mt-1">Must be at least 8 characters</p>
         </div>
 
         <!-- Confirm Password Field -->
@@ -118,46 +115,19 @@
             id="confirmPassword"
             name="confirmPassword"
             required
-            minlength="8"
             class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-orange-500 focus:border-transparent transition"
             placeholder="•••••••••"
           />
         </div>
 
-        <!-- Account Type Selection -->
-        <div>
-          <label class="block text-sm font-medium text-gray-700 mb-2">I want to:</label>
-          <div class="space-y-2">
-            <label class="flex items-center p-3 border border-gray-300 rounded-lg cursor-pointer hover:bg-gray-50 transition">
-              <input
-                type="radio"
-                name="accountType"
-                value="customer"
-                checked
-                class="w-4 h-4 text-orange-500 focus:ring-orange-500"
-              />
-              <span class="ml-3 text-gray-700">Hire professionals (Customer)</span>
-            </label>
-            <label class="flex items-center p-3 border border-gray-300 rounded-lg cursor-pointer hover:bg-gray-50 transition">
-              <input
-                type="radio"
-                name="accountType"
-                value="professional"
-                class="w-4 h-4 text-orange-500 focus:ring-orange-500"
-              />
-              <span class="ml-3 text-gray-700">Offer services (Professional)</span>
-            </label>
-          </div>
-        </div>
-
-        <!-- Terms and Conditions -->
+        <!-- Terms Checkbox -->
         <div class="flex items-start">
           <input
+            type="checkbox"
             id="terms"
             name="terms"
-            type="checkbox"
             required
-            class="w-4 h-4 mt-1 text-orange-500 focus:ring-orange-500 rounded"
+            class="w-4 h-4 text-orange-500 focus:ring-orange-500 rounded mt-1"
           />
           <label for="terms" class="ml-2 text-sm text-gray-600">
             I agree to the <a href="#" class="text-orange-500 hover:underline">Terms of Service</a> and <a href="#" class="text-orange-500 hover:underline">Privacy Policy</a>
@@ -211,8 +181,8 @@
   </main>
 
   <!-- Search Overlay -->
-  <div id="searchOverlay" class="search-overlay fixed left-0 right-0 top-0 z-[100] pt-[70px] bg-black/20 backdrop-blur-sm pointer-events-none">
-    <div class="mx-4 h-[70vh] bg-white shadow-2xl p-8 overflow-y-auto pointer-events-auto">
+  <div id="searchOverlay" class="search-overlay fixed left-0 right-0 top-0 z-[100] pt-[70px] bg-black/20 backdrop-blur-sm">
+    <div class="mx-4 h-[70vh] bg-white shadow-2xl p-8 overflow-y-auto">
       <div class="flex items-center justify-between mb-8">
         <div class="flex-1 mr-4">
           <input
@@ -303,20 +273,18 @@
       }
     });
 
-    // Form validation
+    // Form submission
     const form = document.querySelector('form');
-    const password = document.getElementById('password');
-    const confirmPassword = document.getElementById('confirmPassword');
-
     form.addEventListener('submit', (e) => {
       e.preventDefault();
+      const password = document.getElementById('password').value;
+      const confirmPassword = document.getElementById('confirmPassword').value;
       
-      if (password.value !== confirmPassword.value) {
+      if (password !== confirmPassword) {
         alert('Passwords do not match!');
         return;
       }
       
-      // Form is valid, submit it
       alert('Account created successfully!');
       form.reset();
     });
